--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,30 @@
 asgiref==3.2.10
+astroid==2.4.2
 certifi==2020.6.20
 chardet==3.0.4
+colorama==0.4.3
 coreapi==2.3.3
 coreschema==0.0.4
 defusedxml==0.6.0
 Django==3.0.8
 django-allauth==0.42.0
+django-cors-headers==3.4.0
 django-rest-auth==0.9.5
 django-rest-swagger==2.2.0
 djangorestframework==3.11.0
 drf-yasg==1.17.1
 idna==2.10
 inflection==0.5.0
+isort==4.3.21
 itypes==1.2.0
 Jinja2==2.11.2
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
+mccabe==0.6.1
 oauthlib==3.1.0
 openapi-codec==1.3.2
 packaging==20.4
+pylint==2.5.3
 pyparsing==2.4.7
 python3-openid==3.2.0
 pytz==2020.1
@@ -28,5 +35,8 @@ ruamel.yaml.clib==0.2.0
 simplejson==3.17.2
 six==1.15.0
 sqlparse==0.3.1
+toml==0.10.1
+typed-ast==1.4.1
 uritemplate==3.0.1
 urllib3==1.25.9
+wrapt==1.12.1
